force-app/main/default/objects/Account/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Canaux</valueSetName>
    </valueSet>
</CustomField>