force-app/main/default/objects/Account/fields/Interactions__c.field-meta.xml
<CustomField>
    <fullName>Interactions__c</fullName>
    <label>Interactions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interactions</valueSetName>
    </valueSet>
</CustomField>