force-app/main/default/objects/Account/fields/Statut_du_client__c.field-meta.xml
<CustomField>
    <fullName>Statut_du_client__c</fullName>
    <label>Statut du client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compte</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>