force-app/main/default/objects/Account/fields/TECH_ICE__c.field-meta.xml
<CustomField>
    <fullName>TECH_ICE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH ICE</label>
    <type>Checkbox</type>
</CustomField>