force-app/main/default/objects/Account/fields/Tech_is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Tech_is_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech is Converted</label>
    <type>Checkbox</type>
</CustomField>