force-app/main/default/objects/Account/recordTypes/Compte_Professionnel.recordType-meta.xml
<RecordType>
    <fullName>Compte_Professionnel</fullName>
    <active>true</active>
    <label>Compte_Professionnel</label>
</RecordType>