force-app/main/default/objects/Account/validationRules/Account_VR_001_ICESansCaractereSpeciaux.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_VR_001_ICESansCaractereSpeciaux</fullName>
    <active>false</active>
    <errorConditionFormula>TECH_ICE__c</errorConditionFormula>
    <errorDisplayField>ICE__c</errorDisplayField>
    <errorMessage>Merci de renseigner le ICE sans caractères spéciaux ni espaces avec 15 chiffres.</errorMessage>
</ValidationRule>